--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -28,3 +28,26 @@ jobs:
       with:
         name: build
         path: ${{ env.DOTNET_ROOT }}/publish
+        
+  publish:
+    environment: Production
+    runs-on: ubuntu-18.04
+    needs: build
+    
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build
+          
+      - name: Deploy to server using FTP
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+        with:
+          server: ${{ secrets.SERVER_URL }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          local-dir: ./
+          server-dir: ${{ secrets.APP_DIR }}
+          protocol: ftps
+          security: loose
+          dangerous-clean-slate: true
