--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OrderAPI\OrderAPI.csproj" />
     <ProjectReference Include="..\OrderBLL\OrderDAL.csproj" />
     <ProjectReference Include="..\OrderLogic\OrderLogic.csproj" />
   </ItemGroup>
