--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -42,6 +42,6 @@ jobs:
           SONAR_TOKEN: a233a68c21340473e1279810d33e5d2170af3278
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"RickJanssen500_JLO-api" /o:"rickjanssen500" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"RickJanssen500_JLO-api" /o:"rickjanssen500" /d:sonar.login="a233a68c21340473e1279810d33e5d2170af3278" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build --no-restore
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="a233a68c21340473e1279810d33e5d2170af3278"
