--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -43,5 +43,5 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"RickJanssen500_JLO-api" /o:"rickjanssen500" /d:sonar.login="a233a68c21340473e1279810d33e5d2170af3278" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build --no-restore
+          dotnet build 
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="a233a68c21340473e1279810d33e5d2170af3278"
